# NetMind-Gateway

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.crm-backend  Dockerfile.crm-frontend  Dockerfile.nginx  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/crm-backend/: alembic.ini  main.py
artifacts/crm-backend/alembic/: env.py
artifacts/crm-backend/alembic/versions/: 0001_add_sso_fields.py
artifacts/crm-backend/app/: auth.py  config.py  database.py  deps.py  models.py  schemas.py
artifacts/crm-backend/app/routers/: auth.py  keys.py  models_router.py  projects.py  users.py
artifacts/crm-backend/app/services/: litellm_client.py
artifacts/crm-frontend/: index.html  package.json  vite.config.ts
artifacts/crm-frontend/.replit-artifact/: artifact.toml
artifacts/crm-frontend/src/: App.tsx  index.css
artifacts/crm-frontend/src/components/: app-layout.tsx
artifacts/crm-frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  table.tsx  tabs.tsx
artifacts/crm-frontend/src/lib/: api.ts  auth-context.tsx  types.ts
artifacts/crm-frontend/src/pages/: dashboard.tsx  keys.tsx  login.tsx  models.tsx  project-detail.tsx  projects.tsx  users.tsx
attached_assets/: Pasted--CRM-Service-Product-Requirements-Document-PRD-1-T-ng-q_1773660000220.txt  guide_deploy.md  login_sso.md
design-system/: example-page1.md
nginx/: docker-entrypoint.sh  nginx.conf.template
